backend/k8s/android-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: android-template
  labels:
    app: cloud-android
spec:
  containers:
    - name: android-emulator
      image: cloud-android-image
      ports:
        - containerPort: 5901
